# purecloak

./: .gclient  .gclient_entries  .gclient_previous_sync_commits  .gcs_entries  .gitignore  PureCloak-PRD.md  README.md  cmd.txt  package-lock.json
chromium_src/ash/constants/: ash_features.h  ash_login_pref_names.h  ash_pref_names.h  ash_switches.h  web_app_id_constants.h
chromium_src/ash/public/cpp/: shelf_types.h
chromium_src/ash/webui/mall/: app_id.h
chromium_src/ash/webui/settings/public/constants/: routes_util.h
chromium_src/chrome/app/: chromium_strings.grd
chromium_src/chrome/app/theme/chromium/: BRANDING
chromium_src/chrome/app/theme/chromium/linux/: product_logo_32.xpm
chromium_src/chrome/browser/: chrome_browser_main.cc
chromium_src/chrome/browser/ui/: browser_command_controller.cc
chromium_src/chrome/browser/ui/views/profiles/: profile_menu_view.cc
chromium_src/chromeos/ash/components/policy/device_local_account/: device_local_account_type.h
chromium_src/chromeos/constants/: chromeos_features.h
chromium_src/purecloak/: BUILD.gn  purecloak.gni  purecloak_test_main.cc
chromium_src/purecloak/branding/: build.sh  post_build.sh
chromium_src/purecloak/browser/: BUILD.gn  purecloak_browser_main_parts.cc  purecloak_browser_main_parts.h  purecloak_webui_registrar.cc  purecloak_webui_registrar.h  workspace_launcher.cc  workspace_launcher.h  workspace_launcher_unittest.cc  workspace_launcher_watchdog.cc  workspace_launcher_watchdog.h  workspace_manager_unittest.cc  workspace_profile_applier.cc  workspace_profile_applier.h
chromium_src/purecloak/browser/api/: BUILD.gn  api_unittest.cc  cdp_proxy_handler.cc  cdp_proxy_handler.h  workspace_api_handler.cc  workspace_api_handler.h  workspace_api_server.cc  workspace_api_server.h
chromium_src/purecloak/browser/profiles/: BUILD.gn  store_provider.cc  store_provider.h  workspace.cc  workspace.h  workspace_store.cc  workspace_store.h
chromium_src/purecloak/browser/ui/views/: purecloak_toolbar_button.cc  purecloak_toolbar_button.h
chromium_src/purecloak/browser/ui/views/side_panel/: purecloak_side_panel_coordinator.cc  purecloak_side_panel_coordinator.h  purecloak_side_panel_view.cc  purecloak_side_panel_view.h  workspace_management_dialogs.cc  workspace_management_dialogs.h
chromium_src/purecloak/browser/ui/webui/: purecloak_handler.cc  purecloak_handler.h  purecloak_ui.cc  purecloak_ui.h
chromium_src/purecloak/common/: BUILD.gn  purecloak_i18n.h  purecloak_prng.h  purecloak_seed.cc  purecloak_seed.h  purecloak_seed_unittest.cc  purecloak_switches.cc  purecloak_switches.h
chromium_src/purecloak/content/: BUILD.gn  cdp_websocket_client.cc  cdp_websocket_client.h  cdp_websocket_client_unittest.cc  profile_cdp_injector.cc  profile_cdp_injector.h  profile_cdp_injector_unittest.cc  purecloak_content.h  storage_partition_controller.cc  storage_partition_controller.h
chromium_src/purecloak/content/anti_detection/: anti_detection_engine.cc  anti_detection_engine.h  anti_detection_engine_unittest.cc
chromium_src/purecloak/resources/: BUILD.gn  purecloak.html  purecloak_resources.grd
chromium_src/purecloak/tests/: cdp_integration_test.cc
docs/: 用户使用说明.md
docs/design/: 2026-06-20-cpp-anti-detection-patches.md  2026-06-20-rest-api-cdp-proxy.md
docs/superpowers/plans/: 2026-06-17-merge-profile-into-workspace.md  2026-06-18-purecloak-branding-overhaul.md  2026-06-20-cpp-anti-detection-patches.md  2026-06-20-rest-api-cdp-proxy.md
docs/superpowers/specs/: 2026-06-18-purecloak-branding-overhaul-design.md  2026-06-19-interactive-test-suite-design.md
patches/: 0001-content-browser-buildflags.patch  0002-render-process-ignore-automation.patch  0003-browser-handler-hide-automation.patch  0004-disable-automation-controlled-feature.patch  0005-navigator-webdriver-return-false.patch  0006-input-hide-debugger-flag.patch  0007-synthetic-gesture-routing.patch  0008-canvas-noise-base.patch  0009-canvas-noise-export.patch  0010-audio-buffer-noise.patch  0011-offline-audio-noise.patch  0012-webgl-vendor-renderer.patch  0013-gpu-info-collector.patch  0014-hardware-concurrency.patch  0015-device-memory.patch  0016-headless-ua.patch  0017-screen-dimensions.patch  0018-window-dimensions.patch  0019-storage-quota-normalization.patch  0020-storage-buckets-quota-normalization.patch  0021-font-enumeration-restriction.patch  0022-proxy-header-stripping.patch  0023-native-locale-spoofing.patch  0024-network-timing-normalization.patch  0025-webrtc-ip-spoofing.patch  0026-ice-candidate-replacement.patch  0027-webauthn-capabilities-spoofing.patch  0028-webgpu-adapter-spoofing.patch  0029-webgpu-adapter-features.patch  0030-webgpu-adapter-limits.patch  0031-gl-renderer-string-spoofing.patch  0032-gpu-blocklist-bypass.patch  0033-gpu-machine-model-spoofing.patch  0034-webgl-format-parameter-normalization.patch  0035-gpu-capability-accuracy.patch  0036-ua-brand-spoofing.patch  0037-ua-version-spoofing.patch  0038-gpu-model-database-expansion.patch  0039-brand-string-format-fix.patch  0040-canvas-emoji-rendering-fix.patch  (+9 more)
scripts/: apply-patches.sh  build-android.sh  build-linux.sh  build-macos.sh  build-windows.ps1
tests/: playwright_phase4_test.py  prd_compliance_test.py  prd_debug_walkthrough.py  test_webui_pages.mjs  visual_e2e_test.py
tests/interactive/: common.py  debug_all.py  runner.mjs  utils.mjs
tests/interactive/modules/: 01_main_menu.mjs  02_tab_operations.mjs  03_context_menus.mjs  04_bookmarks.mjs  05_settings_browsing.mjs
