# Copyright 2026 PureCloak Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/buildflag_header.gni")
import("//purecloak/purecloak.gni")

assert(is_purecloak)

buildflag_header("buildflags") {
  header = "buildflags.h"

  flags = [
    "IS_PURECLOAK=$is_purecloak",
  ]
}

source_set("common") {
  sources = [
    "purecloak_i18n.h",
    "purecloak_prng.h",
    "purecloak_seed.cc",
    "purecloak_seed.h",
    "purecloak_switches.cc",
    "purecloak_switches.h",
  ]
  deps = [
    ":buildflags",
    "//base",
    "//base:i18n",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "purecloak_seed_unittest.cc" ]
  deps = [
    ":common",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
