# Copyright 2026 PureCloak Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Phase 2: Chromium kernel extensions
# StoragePartition isolation, proxy routing, fingerprint injection
source_set("content") {
  sources = [
    "anti_detection/anti_detection_engine.cc",
    "anti_detection/anti_detection_engine.h",
    "anti_detection/humanize_engine.cc",
    "anti_detection/humanize_engine.h",
    "cdp_websocket_client.cc",
    "cdp_websocket_client.h",
    "profile_cdp_injector.cc",
    "profile_cdp_injector.h",
    "purecloak_content.h",
    "storage_partition_controller.cc",
    "storage_partition_controller.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//purecloak/browser/profiles",
    "//purecloak/common:buildflags",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "anti_detection/anti_detection_engine_unittest.cc",
    "cdp_websocket_client_unittest.cc",
    "profile_cdp_injector_unittest.cc",
  ]
  deps = [
    ":content",
    "//base",
    "//base/test:test_support",
    "//content/test:test_support",
    "//purecloak/browser/profiles",
    "//testing/gtest",
  ]
}

executable("purecloak_integration_tests") {
  testonly = true
  sources = [
    "../purecloak_test_main.cc",
    "../tests/cdp_integration_test.cc",
  ]
  deps = [
    ":content",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
