# Copyright 2026 PureCloak Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//purecloak/purecloak.gni")

assert(is_purecloak)

source_set("profiles") {
  sources = [
    "store_provider.cc",
    "store_provider.h",
    "workspace.cc",
    "workspace.h",
    "workspace_store.cc",
    "workspace_store.h",
  ]

  deps = [
    "//base",
  ]
}
